--- a/Modulo 5 - Laboratorio - Arrays/style.css
+++ b/Modulo 5 - Laboratorio - Arrays/style.css
@@ -4,30 +4,22 @@
   box-sizing: border-box;
 }
 body {
-  background: #aa4b6b; /* fallback for old browsers */
-  background: -webkit-linear-gradient(
-    to right,
-    #3b8d99,
-    #6b6b83,
-    #aa4b6b
-  ); /* Chrome 10-25, Safari 5.1-6 */
-  background: linear-gradient(
-    to right,
-    #3b8d99,
-    #6b6b83,
-    #aa4b6b
-  ); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+  background: #0F2027;  /* fallback for old browsers */
+background: -webkit-linear-gradient(to right, #2C5364, #203A43, #0F2027);  /* Chrome 10-25, Safari 5.1-6 */
+background: linear-gradient(to right, #2C5364, #203A43, #0F2027); /* W3C, IE 10+/ Edge, Firefox 16+, Chrome 26+, Opera 12+, Safari 7+ */
+
 }
-h1{
+h2{
   color: #fff;
   margin: 20px;
 }
 table{
-  margin: auto;
-  width: 100%;
+  margin: 140px;
+  margin-left: 550px;
+  display: none;
 }
 thead {
-  background-color: rgb(40, 39, 59);
+  background-color: rgb(71, 124, 138);
   color: #fff;
   font-size: 1.2em;
 }
@@ -45,21 +37,17 @@ tr > td {
 button{
   border-radius: 15px;
   border: none;
-  width: 10%;
+  width: 8%;
   margin: 10px;
-  padding: 20px;
-  font-size: 1.8em;
+  padding: 10px;
+  font-size: 1.2em;
   font-weight: 700;
   font-family: serif;
-  box-shadow: 3px 3px 3px #24565d;
+  background-color: rgb(220, 224, 228);
+  box-shadow: 3px 3px 3px #050e0f;
 }
 button:active{
   background-color:#6b6b83;
   color: #fff;
   transform: translateY(3px);
-}
-#listado{
-  font-size: 1.5em;
-  width: 15%;
-  padding: 23px;
 }
